--- a/mvc-ifyme-capn/Base.lproj/Main.storyboard
+++ b/mvc-ifyme-capn/Base.lproj/Main.storyboard
@@ -20,10 +20,51 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uc3-d5-bA5" customClass="CustomPrettyView" customModule="mvc_ifyme_capn" customModuleProvider="target">
                                 <rect key="frame" x="62" y="183" width="250" height="300"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="1Hi-BY-qrA">
+                                        <rect key="frame" x="20" y="20" width="210" height="260"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I really want the" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kfw-c5-Xch">
+                                                <rect key="frame" x="0.0" y="0.0" width="210" height="52"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="22"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="IPHONE MODEL" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JdK-zI-d39">
+                                                <rect key="frame" x="0.0" y="52" width="210" height="52"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="22"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="in IPHONE COLOR" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ju3-mS-Uad">
+                                                <rect key="frame" x="0.0" y="104" width="210" height="52"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="22"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="and it costs" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o4c-8Q-4Ss">
+                                                <rect key="frame" x="0.0" y="156" width="210" height="52"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="22"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$IPHONE PRICE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fNf-aq-Fh8">
+                                                <rect key="frame" x="0.0" y="208" width="210" height="52"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="22"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="1Hi-BY-qrA" secondAttribute="bottom" constant="20" id="5A9-n9-P8I"/>
                                     <constraint firstAttribute="height" constant="300" id="NIU-6D-X6r"/>
+                                    <constraint firstItem="1Hi-BY-qrA" firstAttribute="leading" secondItem="uc3-d5-bA5" secondAttribute="leading" constant="20" id="Pqw-iv-Sv3"/>
+                                    <constraint firstItem="1Hi-BY-qrA" firstAttribute="top" secondItem="uc3-d5-bA5" secondAttribute="top" constant="20" id="bCA-qc-Kdy"/>
                                     <constraint firstAttribute="width" constant="250" id="bhT-uB-SLU"/>
+                                    <constraint firstAttribute="trailing" secondItem="1Hi-BY-qrA" secondAttribute="trailing" constant="20" id="fCa-GY-tBI"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -34,9 +75,15 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="iPhoneColorLabel" destination="ju3-mS-Uad" id="syU-AQ-T1b"/>
+                        <outlet property="iPhoneNameLabel" destination="JdK-zI-d39" id="tWv-1d-cMp"/>
+                        <outlet property="iPhonePriceLabel" destination="fNf-aq-Fh8" id="NvH-9D-6Zc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="24.800000000000001" y="29.23538230884558"/>
         </scene>
     </scenes>
 </document>
